After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 775546 - gdkscreen-x11: Don't try to calculate a refresh rate for RandR 1.3 when the XRRModeInfo doesn't have one
gdkscreen-x11: Don't try to calculate a refresh rate for RandR 1.3 when the X...
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Backend: X11
3.22.x
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2016-12-03 02:21 UTC by Pavel Roskin
Modified: 2018-03-08 15:41 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch for the issue (846 bytes, patch)
2016-12-03 02:21 UTC, Pavel Roskin
committed Details | Review

Description Pavel Roskin 2016-12-03 02:21:16 UTC
Created attachment 341290 [details] [review]
Patch for the issue

X11rdp is a backend for xrdp. It has been reported that all gtk3 programs crash when run in X11rdp. I confirmed that issue and submitted a fix to xrdp:
https://github.com/neutrinolabs/xrdp/pull/518

The crash is due to division by zero in init_randr13(). It turns out gtk has a zero check in init_randr15() (see bug #768999), but not in init_randr13(). X11rdp is not RandR 1.5 capable, which explains why X11rdp is affected.
Comment 1 Matthias Clasen 2018-02-10 05:18:01 UTC
We're moving to gitlab! As part of this move, we are moving bugs to NEEDINFO if they haven't seen activity in more than a year. If this issue is still important to you and still relevant with GTK+ 3.22 or master, please reopen it and we will migrate it to gitlab.
Comment 2 Debarshi Ray 2018-03-08 14:57:47 UTC
Yes, this is still relevant.

Bug 768999 fixed init_randr15 which is used by Xvfb, but not init_randr13. The Windows Exceed X server is another X server that hits init_randr13 and doesn't report a refresh rate. See: https://bugzilla.redhat.com/show_bug.cgi?id=1502788
Comment 3 Debarshi Ray 2018-03-08 15:21:04 UTC
Review of attachment 341290 [details] [review]:

Looks good to me. The bug URL should be added to the commit message, though.
Comment 4 Debarshi Ray 2018-03-08 15:41:16 UTC
Pushed to both master and gtk-3-22. Thanks for the patch!